k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: velopay
  namespace: staging
  labels:
    app: gateway
spec:
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
  selector:
    app: velopay
