k8s/ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velopay
  namespace: staging
spec:
  ingressClassName: "nginx"
  rules:
    - host: api.velopay.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: velopay
                port:
                  number: 8080
